objects/Enrollment__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <formula>Enrollee_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Certification_Agreement_URL__c</fullName>
        <formula>IF (Class_Format__c = "Certification", $Setup.Training_Agreement_Settings__c.Certification_Agreement_Link__c + '?Enrollment_ID='+Id, '')</formula>
        <label>Certification Agreement URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Certification_Exam_Agreement__c</fullName>
        <label>Certification Exam Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                    <default>true</default>
                    <label>Awaiting Response</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Certification_Training_Dates__c</fullName>
        <description>This formula field use to calculate the certification training dates and which is used in visualforce Email template</description>
        <formula>IF( Start_Date__c == End_Date__c , 
text(DAY( Start_Date__c )) +' '+ CASE( MONTH( Start_Date__c ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +' '+ Text(YEAR( Start_Date__c )) , 
IF( MONTH( Start_Date__c ) == MONTH( End_Date__c ), 
TEXT(DAY(Start_Date__c))+' - ' 
+ 
text(DAY( End_Date__c )) +' '+ CASE( MONTH( End_Date__c ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +' '+ Text(YEAR( End_Date__c )) 
,text(DAY( Start_Date__c )) +' '+ CASE( MONTH( Start_Date__c ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec")+' - '+text(DAY( End_Date__c )) +' '+ CASE( MONTH( End_Date__c ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +','+ Text(YEAR( End_Date__c )) 
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Training Dates</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Format__c</fullName>
        <formula>TEXT(Class__r.Class_Format__c)</formula>
        <label>Class Format</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Status__c</fullName>
        <formula>TEXT( Class__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Type__c</fullName>
        <formula>TEXT( Class__r.Class_Type__c )</formula>
        <label>Class Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Class_Enrollees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>CourseId__c</fullName>
        <description>Get Course Id From Class</description>
        <formula>CASESAFEID(Class__r.Course__c)</formula>
        <label>CourseId</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Code__c</fullName>
        <formula>Class__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_End_Date__c</fullName>
        <formula>text(DAY(  End_Date__c  )) +'-'+ CASE( MONTH(  End_Date__c  ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +'-'+ Text(YEAR(  End_Date__c  ))</formula>
        <label>Display End Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_Start_Date__c</fullName>
        <formula>text(DAY(  Start_Date__c  )) +'-'+ CASE( MONTH(  Start_Date__c  ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +'-'+ Text(YEAR(  Start_Date__c  ))</formula>
        <label>Display Start Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <formula>Enrollee_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Enrollee_Name__c</fullName>
        <label>Enrollee Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Class Enrollments</relationshipLabel>
        <relationshipName>Class_Enrollees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Enrollment_Code__c</fullName>
        <label>Enrollment Code</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Payment</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Class Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>No Show-Bill</fullName>
                </value>
                <value>
                    <fullName>Registered - Awaiting Payment</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>!!! CHECK ME !!! -</fullName>
                </value>
                <value>
                    <fullName>!!! CHECK ME !!! -*** Unselected ***</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Enterprise_Training_Agreement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Enterprise Training Agreement</label>
        <referenceTo>Enterprise_Training_Agreement__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Exam_Date__c</fullName>
        <description>Display the Exam Date from the associated class.</description>
        <formula>Class__r.Exam_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Expiration_Reminder__c</fullName>
        <inlineHelpText>Days before the class enrollment expires that an email reminder should be sent to the enrollee</inlineHelpText>
        <label>Expiration Reminder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Format_Of_Class__c</fullName>
        <formula>Class__r.Format_Of_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format Of Class</label>
        <type>Text</type>
    </fields><fields>
        <fullName>MW_Account_ID__c</fullName>
        <description>Field to Store MathWorks Account Id on the Enrollment</description>
        <label>MW Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Notify_RAC_for_Post_Payment_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary use case is Japan for some customers to process payment after the class is completed.  Workfront Story #1736520</description>
        <inlineHelpText>If checked, will create a Case for RAC to process an invoice against an existing PO when the enrollment is marked completed.</inlineHelpText>
        <label>Notify RAC for Post Payment Processing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Passed_Test_Flag__c</fullName>
        <description>Field to store the exam result based on the test scores and the passing scores</description>
        <label>Passed Test?</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>e-Payment</fullName>
                </value>
                <value>
                    <fullName>Prepaid/No Charge</fullName>
                </value>
                <value>
                    <fullName>Credit Terms</fullName>
                </value>
                <value>
                    <fullName>Training Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Seat_Price__c</fullName>
        <label>Seat Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Self_Paced_Exp_Reminder_Date__c</fullName>
        <formula>IF( 
   Format_Of_Class__c = "Self-Paced", 
   IF( NOT( ISBLANK( Expiration_Reminder__c )) , 
             End_Date__c - Expiration_Reminder__c , End_Date__c - 30), null)</formula>
        <label>Self Paced Exp Reminder Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Send_Awaiting_Payment_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Awaiting Payment. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend Awaiting Payment email notification</inlineHelpText>
        <label>Send Awaiting Payment Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Cancelled_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Cancelled. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend cancelled email notification</inlineHelpText>
        <label>Send Cancelled Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Certificate</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Class_Cancellation_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of a class is changed to Cancelled. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend Class Cancelled email notification</inlineHelpText>
        <label>Send Class Cancellation Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Completion_Certificate_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Completed and the Enrollment has the Send Certificate flag checked. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend class completion certificate</inlineHelpText>
        <label>Send Completion Certificate Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag for whether automated email notifications should be sent related to this enrollment</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Exam_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an exam enrollment is completed, the Result is not passing and the Enrollment has the Send Certificate and Send Email flag checked. This flag will be used to determine the base template to be used for exam failure emails.</description>
        <inlineHelpText>Resend Exam result notification. Certification certificate will be sent is passed.</inlineHelpText>
        <label>Send Exam Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Level_3_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, process builder will send the contact an email to complete a level 3 training survey.</description>
        <label>Send Level 3 Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Registered_AP_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Registered - Awaiting Payment. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend Registered - Awaiting Payment email notification</inlineHelpText>
        <label>Send Registered - AP Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Registered_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Registered. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend Registered email notification</inlineHelpText>
        <label>Send Registered Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Registered_Reminder_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to true by a workflow 7 days prior to the class start date</description>
        <inlineHelpText>Resend Registered reminder email notification. This is automatically sent 7 days prior to class start.</inlineHelpText>
        <label>Send Registered Reminder Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Self_Paced_Expiration_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag when checked will send a reminder email to customers enrolled in self-paced classes that their registration will expire within 30 days</description>
        <label>Send Self Paced Expiration Reminder</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Training_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to manually send the Training Survey to the Contact of the Enrollment</description>
        <inlineHelpText>Used to manually send the Training Survey to the Contact of the Enrollment</inlineHelpText>
        <label>Send Training Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Waitlisted_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag will be set to True when the status of an enrollment is changed to Waitlisted. This flag will be used to determine the base template to be used for email.</description>
        <inlineHelpText>Resend Waitlisted email notification</inlineHelpText>
        <label>Send Waitlisted Notification</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Siebel_Enrollment_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Siebel enrollment id</description>
        <externalId>true</externalId>
        <label>Siebel Enrollment ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Enrollment</fullName>
                </value>
                <value>
                    <fullName>Manual Enrollment</fullName>
                </value>
                <value>
                    <fullName>Self-Enrollment Portal</fullName>
                </value>
                <value>
                    <fullName>Commerce Enrollment</fullName>
                </value>
                <value>
                    <fullName>External Enrollment</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Survey_Training_Survey_Date_Received__c</fullName>
        <description>The day and time the Enrollment Training Survey is received</description>
        <inlineHelpText>The day and time the Enrollment Training Survey is received</inlineHelpText>
        <label>Survey - Training Survey  Date Received</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Survey_Training_Survey_Last_Sent__c</fullName>
        <description>Indicates the date and time the Training Survey was sent.</description>
        <inlineHelpText>Indicates the date and time the Training Survey was sent.</inlineHelpText>
        <label>Survey - Training Survey Last Sent</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Test_1_Pass_Score__c</fullName>
        <formula>Test_Name__r.Passing_Score_1__c</formula>
        <label>Test 1 Pass Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_1_Score__c</fullName>
        <label>Test 1 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_2_Pass_Score__c</fullName>
        <formula>Test_Name__r.Passing_Score_2__c</formula>
        <label>Test 2 Pass Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_2_Score__c</fullName>
        <label>Test 2 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_Flags_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>test fields for Email notification frameWork</description>
        <label>Test_Flags_1</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Test_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Name</label>
        <referenceTo>Training_Test__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Enrollment</label><nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Enrollments</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollee_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Class__c</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Order_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Awaiting_Payment_Status</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enrollee_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Class__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Class_Status__c</columns>
        <columns>Enrollment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Payment</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:5</value>
        </filters>
        <label>Awaiting Payment Status</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MathWorks_Customer_Services</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>Certified_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Enrollee_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Test_Name__c</columns>
        <columns>Passed_Test_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Certification</value>
        </filters>
        <label>Certified Contacts</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Distance_Learning</fullName>
        <active>true</active>
        <description>Enrollments for Distance Learning Classes</description>
        <label>Distance Learning</label>
    </recordTypes><recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <description>Enrollments for Exam Classes</description>
        <label>Exam</label>
    </recordTypes><recordTypes>
        <fullName>Instructor_Led</fullName>
        <active>true</active>
        <description>Enrollments for Instructor Led Classes</description>
        <label>Instructor Led</label>
    </recordTypes><recordTypes>
        <fullName>Pre_Enrollment</fullName>
        <active>true</active>
        <description>All Enrollment records are created with the Pre-Enrollment Record Type. Upon save of the New record it is switched with a Workflow Rule to the Record Type of the class. This is the only Records Type available on User Profiles.</description>
        <label>Pre-Enrollment</label>
    </recordTypes><recordTypes>
        <fullName>Self_Paced</fullName>
        <active>true</active>
        <description>Enrollments for Self-Paced Classes</description>
        <label>Self-Paced</label>
    </recordTypes><validationRules>
        <fullName>New_Enrollment_Class_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
     NOT(ISPICKVAL(  Class__r.Status__c  , "Active")) 
    ,ISNULL(CreatedDate) 
    ,not($Permission.Allow_Training_Data_Changes)
)</errorConditionFormula>
        <errorMessage>Enrollment cannot be created if Class Status is not Active</errorMessage>
    </validationRules><validationRules>
        <fullName>New_Enrollment_Contact_Flags</fullName>
        <active>true</active>
        <errorConditionFormula>AND
( OR 
 (
    Enrollee_Name__r.Denied_On_Watch_List_checkbox__c  =  True
  , Enrollee_Name__r.Export_Prohibited_checkbox__c = True
  , Enrollee_Name__r.Account.Denied_Company__c = True
  , Enrollee_Name__r.Account.Export_Status__c = "A" 
 )
, not($Permission.Allow_Training_Data_Changes)
)</errorConditionFormula>
        <errorMessage>Enrollment cannot be created if Contact or Account has Denied Flag or Export Prohibited Flag</errorMessage>
    </validationRules><validationRules>
        <fullName>Prevent_Post_Payment_without_Order_Num</fullName>
        <active>true</active>
        <description>Prevents a user from saving an enrollment with the Notify RAC for Post Payment Processing flag checked if there is no Order Number provided (as RAC needs an Order Number in order to process the invoice.) Workfront Story #1736520</description>
        <errorConditionFormula>AND(
	Notify_RAC_for_Post_Payment_Processing__c 
	,ISBLANK(Order_Number__c)
	,NOT($Permission.Allow_Post_Pay_Enrollment_without_Order_Number) 
)</errorConditionFormula>
        <errorDisplayField>Order_Number__c</errorDisplayField>
        <errorMessage>An Order Number must be provided in order to mark an enrollment for post payment processing.</errorMessage>
    </validationRules><validationRules>
        <fullName>Prevent_certification_exam_Test_Name</fullName>
        <active>true</active>
        <description>Prevent users to enter the exam test name if the value of certification exam agreement is anything other than Accept</description>
        <errorConditionFormula>AND
   (
      ISCHANGED(Test_Name__c)
     ,NOT(ISBLANK(Test_Name__c))
     ,Format_Of_Class__c = "Exam"
     ,NOT(ISPICKVAL( Certification_Exam_Agreement__c, "Accept"))
     ,not($Permission.Allow_Training_Data_Changes)
   )</errorConditionFormula>
        <errorDisplayField>Test_Name__c</errorDisplayField>
        <errorMessage>Cannot enter test name if certification exam agreement is not accepted</errorMessage>
    </validationRules><validationRules>
        <fullName>Prevent_enroll_on_inact_ent_train_agr</fullName>
        <active>true</active>
        <description>Prevent enrollments on inactive training agreements</description>
        <errorConditionFormula>AND(ISNEW(), NOT Enterprise_Training_Agreement__r.Is_Active__c,  NOT ISBLANK( Enterprise_Training_Agreement__c ) )</errorConditionFormula>
        <errorDisplayField>Enterprise_Training_Agreement__c</errorDisplayField>
        <errorMessage>Enterprise Training Agreement is inactive</errorMessage>
    </validationRules><validationRules>
        <fullName>Resend_Notifications_flags_Send_Email</fullName>
        <active>true</active>
        <description>The validation rule ensures that the Resend Notifications flags only can be checked when Send Email is true</description>
        <errorConditionFormula>AND( NOT ( Send_Email__c ) , OR( Send_Awaiting_Payment_Notification__c,  Send_Cancelled_Notification__c,  Send_Class_Cancellation_Notification__c,  Send_Completion_Certificate_Notification__c,  Send_Exam_Notification__c,  Send_Registered_AP_Notification__c,  Send_Registered_Notification__c,  Send_Registered_Reminder_Notification__c, Send_Waitlisted_Notification__c  ))</errorConditionFormula>
        <errorDisplayField>Send_Email__c</errorDisplayField>
        <errorMessage>Resend Notifications flags only can be checked when Send Email is checked</errorMessage>
    </validationRules></CustomObject>